navbar spacing fix

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -61,6 +61,7 @@ main {
 .header .title a {
   text-decoration: none;
   color: black;
+  padding: 0.75rem;
 }
 .header .title a:hover {
   color: rebeccapurple;
